(maybe) fixed card overlapping registration form

--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -9,6 +9,7 @@
 }
 
 .landing-header-left {
+  margin: 0 0 4em;
   display: flex;
   align-items: center;
   flex: 3;
@@ -17,7 +18,7 @@
 
 .landing-header-left h2 {
   max-width: 7em;
-  margin: 1em 0;
+  margin: 0;
   padding: 1em;
   background-color: #eff2f6;
   border: 9px solid #3d4143ed;
